# larcoreobj

./: CMakeLists.txt
cmakeConfig/: CMakeLists.txt  larcoreobj-fragment.cmake.in
larcoreobj/: CMakeLists.txt
larcoreobj/SimpleTypesAndConstants/: CMakeLists.txt  PhysicalConstants.h  RawTypes.h  classes.h  classes_def.xml  geo_optical_vectors.h  geo_types.cxx  geo_types.h  geo_types_fhicl.h  geo_vectors.h  readout_types.h  readout_types_fhicl.h
larcoreobj/SummaryData/: CMakeLists.txt  GeometryConfigurationInfo.cxx  GeometryConfigurationInfo.h  POTSummary.cxx  POTSummary.h  RunData.cxx  RunData.h  classes.h  classes_def.xml
larcoreobj/SummaryData/SampledDicts/: CMakeLists.txt  classes.h  classes_def.xml
test/SimpleTypesAndConstants/: CMakeLists.txt  geo_types_fhicl_test.cc  geo_types_test.cc  geo_vectors_test.cc  readout_types_fhicl_test.cc  readout_types_test.cc  testPhysicalConstants.cc
ups/: product_deps
